# PyDKG

./: README.md  pyproject.toml
src/: example.py
src/pedersen/: __init__.py  asn1.py  generate_groups.py  groups.py  polynomials.py  utils.py  vss.py
temp/: main.py
