[tool.poetry]
name = "pydkg"
version = "0.1.0"
description = "A distributed way of sharing a secret key among people"
authors = ["Elias Yona <iconelias001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"
gmpy2 = "^2.1.5"
asn1crypto = "^1.5.1"
sympy = "^1.11.1"
cryptography = "^40.0.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
